Projeto adivinhe o número

--- a/Manipulando Listas/index.html
+++ b/Manipulando Listas/index.html
@@ -9,8 +9,8 @@
 	<h2>Carrinho de compras:</h2>
 
 	Nome:
-	<input type="text" style="width:180px" id="produto" maxwidt placeholder="Nome"/><br/><br/>
-	
+	<input type="text" style="width:180px" name="produto" id="produto" maxwidt placeholder="Nome"/><br/><br/>
+
 	<button onclick="adicionarItem();">Adicionar Produto</button>
 	<br/><br/>
 
